Wed May  9 15:59:17 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_WERROR_FLAG): append all warning flags which
	  are enabled to compile, so that printf format modifiers properly
	  fail.  [ruby-core:41351] [Bug #5679]

Mon May  7 20:23:29 2012  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb (random_bytes): call to_int method for the
	  argument at first.

Mon May  7 20:23:29 2012  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb: show actual read length in an error message.

Mon May  7 11:09:20 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (Init_bigdecimal): define IDs before
	  they are used. [ruby-core:44900] [Bug #6406]

Fri Apr 27 11:02:33 2012  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/rinda/test_rinda.rb (test_core_03_notify): Fixed test failures
	  [ruby-dev:44430] [Ruby 1.9 - Bug #372]

Fri Apr 27 08:29:51 2012  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/rinda/test_rinda.rb: fix sticks on some testsf problem 
	  [Bug #6272]

Wed Apr 25 05:56:56 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#to_a): split for each lines.
	  [ruby-dev:45568][Bug #6348]

Tue Apr 24 21:20:39 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/optparse.rb (OptionParser#to_a): should split by end-of-line,
	  and MUST TEST IT, MUST RUN THE TEST, MUST VERIFY BEFORE BACKPORT.
	  [ruby-dev:45568][Bug #6348]

Tue Apr 24 14:55:41 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#to_a): String#to_a is no longer
	  defined.  [ruby-dev:45568][Bug #6348]

Sat Apr 21 07:16:16 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (rb_strftime_with_timespec): fix padding of time zone
	  offset.  [ruby-dev:43287][Bug #4458]

	* strftime.c (rb_strftime_with_timespec): add an interim digit for
	  the timezone offset which is less than an hour.

	* strftime.c (rb_strftime_with_timespec): fix carry-up bug and